<resources>
    <string name="app_name">DanaAps</string>

    <string name="action_settings">Settings</string>
    <string name="uRemainingInit">.. u</string>
    <string name="basals_prompt">100%</string>

    <string-array name="basals_arrays">
        <item>  0%</item>
        <item> 10%</item>
        <item> 20%</item>
        <item> 30%</item>
        <item> 40%</item>
        <item> 50%</item>
        <item> 60%</item>
        <item> 70%</item>
        <item> 80%</item>
        <item> 90%</item>
        <item>100%</item>
        <item>110%</item>
        <item>120%</item>
        <item>130%</item>
        <item>140%</item>
        <item>150%</item>
        <item>160%</item>
        <item>170%</item>
        <item>180%</item>
        <item>190%</item>
        <item>200%</item>
    </string-array>

    <string name="title_activity_preferences">Preferences</string>
    <string name="ns_sync_title">Nightscout synchronization</string>
    <string name="ns_sync_profile_title">Synchronize profile</string>
    <string name="ns_units">Units</string>
    <string name="safety_title">Safety</string>
    <string name="safety_maxbolus_title">Max allowed bolus</string>
    <string name="safety_maxcarbs_title">Max allowed carbs</string>
    <string name="nav_home">Home</string>
    <string name="nav_preferences">Preferences</string>
    <string name="nav_refreshtreatments">Refresh treatments from NS</string>
    <string name="nav_backup">Backup</string>
    <string name="nav_resetdb">Reset databases</string>
    <string name="nav_exit">Exit</string>
    <string name="safety_useextended_title">Use extended boluses</string>
    <string name="safety_useextended_summary">Use extended boluses for high temps (\>200%)</string>
</resources>
