<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_preferences"
            android:title="@string/nav_preferences" />
        <item
            android:id="@+id/nav_refreshtreatments"
            android:title="@string/nav_refreshtreatments" />
        <item
            android:id="@+id/nav_resetdb"
            android:title="@string/nav_resetdb" />
        <item
            android:id="@+id/nav_backup"
            android:title="@string/nav_backup" />

        <!--<item
            android:id="@+id/nav_test_alarm"
            android:title="Broadcast" />-->



        <item
            android:id="@+id/nav_exit"
            android:title="@string/nav_exit" />

    </group>


</menu>