<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="safety"
        android:title="@string/safety_title">

        <EditTextPreference
            android:title="@string/safety_maxbolus_title"
            android:key="safety_maxbolus"
            android:defaultValue="3"
            android:inputType="numberDecimal">
        </EditTextPreference>
        <EditTextPreference
            android:title="@string/safety_maxcarbs_title"
            android:key="safety_maxcarbs"
            android:defaultValue="48"
            android:inputType="numberDecimal">
        </EditTextPreference>
        <SwitchPreference
            android:title="@string/safety_useextended_title"
            android:defaultValue="false"
            android:key="safety_useextended"
            android:summary="@string/safety_useextended_summary">
        </SwitchPreference>
    </PreferenceCategory>
</PreferenceScreen>